programmatically add icon to a row

--- a/MIMIRSOFT/MIMIRSOFT/Form1.resx
+++ b/MIMIRSOFT/MIMIRSOFT/Form1.resx
@@ -67,38 +67,38 @@
   <data name="startBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALgSURBVFhHvZdLSBtRFIanlC5cFEoXXZSAi1KU4CNqzEwm
-        j8mMM5PJy8RHdO2mKzfFvcVdpYh0kdIiSKHY0kJLFoW20iK1JmkVQ9u8NZO6c+PChQsRyem95pZi1UaT
-        mfzwQZg55/w/zMzNvdQfMS+ZplHVPzv0K1AIq77kiBqYkt8z18lt/RUueedHSn44hurZGVZ94+FX4cuk
-        TB91znZe85f8B2FkehrDJX9qMOMWSbn2sj/upsMlHzL7Dx99ZfRoosoKf4u0aScmYuaGVS+ck/0h1TvN
-        RtmrpL1+MRETh4bCRQgWpO2BomeMAuoSGVO7cIBB1QO1EFLda8GUzJJRtekoQFGBmllUyqFNZUFZ4gxk
-        5MWEAwwU3aABe6GiPInXFDL6fMIBQmiAVvQXpK1gXh4l46vLjANsyqA94rKy6uwiNmcLBwhuSqAH7Wnj
-        YWBDmpM+WG8Qu5PCAfpRsZ7409JuoCBO9DzpuUJs/8ocaeMCGyI0Al9OTIqL7E1iXVElQB8qaAy+vJAg
-        1hXhAP4NARoJ/bSrg9hXAvgKAjSMHA/03IkAPLqpP948D/K66/gjMKEA3oIL9MaTcYG8xiXZ513HX0Ic
-        wJNHBXqR5cC9btuVY86JnjunfIY4gJLnQHNyHBi/Gw+lhG3O+qjj7IXIFGlFAZyoSTvcKSeIcfuyM2qu
-        vhSbHrZy7hxq0gA57QDpm32L/8SMkPHVhQPIOQfURdYB1ph1T4izk8yM4WJ/xziAlLVDrYhvbGUhwS5Y
-        nrXXtiGpNYD40wZCnFlzvDXXtyVrQwHErA3OTZoFYdW6zS3RY6i9/k0pDtCXZaEqGRYsXy37/Apzv2W6
-        RbtteceD23RfxooMTkfAvLaW+RgTZV90a38wab7XfI3/wRwcGf0Dug6uBJ2yvzPrdzTDcsR75/kUA3yG
-        gH7bV+kdx2fLOBWm9D2cYhnuGpqcy72zXIwucHFLkvvSO2WcMep8PKeo37FJeXMNscpEAAAAAElFTkSu
-        QmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZdNSNtgGMc7xg4eBrLDDqPgYQylOK1amzT9
+        SBOTNP2y9aN69rKTl+Hd4W0yRHbo2BBkMNzQUw9jc4Mhc7bdFMu2fmvTefPiwYMHEemz97XvGE5dNU36
+        hx+U5Hme/x+SvH1fwx/Ri3TTqBKYHfoVLEYUf2pECU5Jy/Qtclt/Rcq++ZFyAE6hePeGFf94ZClynZTp
+        o87ZzuZAOXAUQabnMVwOpAezHoGUay/H824qUvYjs/+w7K+gRxOT17i7pE070VELO6z44JIcDim+aSbG
+        3CTt9YuOmlk0FK5CqCjuDpS8YwYwXCNj1AsHGFS8oIaw4tkIpSWGjFKnkwAlGVTzTq6Et+UFeYU1kpFX
+        Ew4wUPKABhyES9IkXlPI6MsJBwijAVrRXxR3QgVplIyvLQsOsC2B9gir8rqri9hcLBwgtC2CHpgypuPg
+        ljgnfrDdJnZnhQP0o2I9CWTE/WBRmOh50XOD2P6VJdrOBrcEaAT+vJASPjJ3iHVV1QB9qKAx+At8klhX
+        hQMEtnhoJNTLrg5iXw3gL/LQMPIcUHNnAnDopv74ChxIm+7Tj8CMAviKbtAbb9YN0gabYl53nX4JcQBv
+        ARXoRY4Fz6Z9X4q7JnoenPMZ4gBygQXNybNg+m46FpP2OduzjosXInO0DQVwoSbt8KRdICQcq66YpfZS
+        bH7axnryqEkDpIwTxG+OHe4TPULG1xYOIOWdUBc5J9jitgM+wUzSM8ar/R3jAGLOAWoRluwVPsksWF/d
+        V7chURtA+GkHPkFvON9a6tuStaMAQs4OlybDAL9u22VXqDHUXv+mFAfoyzFQkywD1q/WQ26Nftw63ard
+        trzjyT2qL2tDBufDYxZtFS5Ox5g33dofTFoetTRzP+ijE6N/QNfBnaTSjvcW/Y5mWM5E7zyXpoHLEtBv
+        xzq15/xsHTdEDPoeTrGMD41NrtXeWTZOFdmENcV+6Z0yzZh0Pp4bDL8BESV5YPVFvwkAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="stopBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZc9TBNhGMcfGXTRCRkq0nJtgfZ6713vo9dS
-        BxdjNME4mDg4kJiocdAo6OTiIgsuDjIQY/xCHSARtUiBItKgUD5ECLSAfIgYYwyrXyi8PmdfBwyBUq/3
-        T37D3b33/P696yV3YEK2rIM5qfOVHYqG+a894SDtCesZEd8TXKwqKZbYiOxzU/RUPgnrS9OhAF0IaRkz
-        ietjuv75gtMpsFGbT4NEqrrK9eUZHPg+CyawRLxc/nTO4fCykZmnSZZqGkL6ymxQo/NBNWuSeH48pH+s
-        5naVstEbJq9Z9df3YvtZXaXvTGAMS3Sr6oezRUUu5lg7PMDWSEBp7Aum5XMmMqprtCsYmD9jt3NMtzp7
-        Cwq2R3WlI4ELZwIKnc0BI1jkharOnbLZ7EybToXNtrNd1xIDuMCQ55LhAJbQtekThYW7mR6gQ9OSg3hw
-        WpMtYQhdnao6xfQAMfzlb1XZMqawRCc6mR6vAF6WKdVvGZNIDJ1MbxRQ6KSCByxiAjGcTA/Qrim4U7KM
-        FGI4mR6gDTdSMh6wiCRiOJkeIKoqf3ZaxThiOJkeoBU3xv2ipRhOpjcKyHRMEi3FcDI9QIsi01GJWMoz
-        dDI9QAQ3RkRiKS34KDI9wFPZT9+IgqVE0Mn0RgFpeYAIdNgiBhHDyfQAV93u4y08/6sfD7wWfDnFkNf5
-        pZVaj+c806dTW+KqjGCJBC4ayhGDSCs+AdcE/grTrk6Nmzt2y+H42Wss9plPFP9810VfPdOtncsu19HH
-        NtvSKx9PB0ykjRB6QxIbUZGXNq2TSxx3pFkUf7zEE/v5/6cD7/ttSYq5AbYxxca56HIdfoQlenBAgvdm
-        TQxv5x1C+svy83ew0ZmnmuMq7hHyPY4l+rzeTdOJV/CuJKVUfOdkIzef007nwSZCvnXjwF6PJ2OeY+kH
-        oriw79834Gxysrh4//3S0i9NgkAbM+QhIYsH7Hb81DAva31+/yXLAPwGroZqxLwMPtgAAAAASUVORK5C
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZc9TBNhGMdfGXTRCRkq0nJtgfZ6713vo9dS
+        BxdjNME4mDg4kJiocdAo6OTiIgsumuhAjBG/h5KIWqRAEWlQKB8iBMqHfIgYYwyrXyi8PmcfBwyBUq/3
+        T37D3b33/P696yV3xIRsWgNzct1XdiAW5r92hYOsK6xnRGJXcKGqpFjCEdnnpuipfBLWF6dCATYf0jJm
+        AtbHdf3zOadTwFEbzz2JVnWU60vTMPB9FoxDiUS5/OmMw+HFkZmnQZZq6kP68kxQY3NBNWtScH4ipH+s
+        5naU4uh1k9eo+uu6of2MrrJ3JjACJTpV9cPpoiIXOlYPT8jmaECJ9ATT8lkTGdY11hEMzJ2y2znUrczu
+        goKtMV1pS8LC6YDCZnLAEBR5oaqzJ2w2O2rTqbDZtrfqWrIPFhjyXDIYgBK6NnWssHAn6glp07RUPxyc
+        0mRLGABXu6pOop6QOPzyt6psGZNQoh2cqIcrAJdlUvVbxgQQByfqjQIKm1DggEWMA4YT9YS0agrslCxj
+        DDCcqCekBTbGZDhgESnAcKKekJiq/NlpFaOA4UQ9Ic2wMeoXLcVwot4oILMRSbQUw4l6QpoUmQ1L1FKe
+        gRP1hERhY0ikltIEjyLqCXkq+9kbUbCUKDhRbxSQlvqowAYtoh8wnKgn5LLbfbSJ53/1woHXgi+nGPKr
+        fmm51uM5i/p0aktclVEokYRFAzmiH2iGJ+CKwF9C7crUuLkjtxyOn93GYp/5xODPd0301aFu9Vx0uQ4/
+        ttkWX/l41mciLZSyG5IYAUVe2rRGLnDcoUZR/PESTuzl/582uO/1khR3E7IFFevnvMt18BGU6IIBSd6b
+        NXG4nbcp7S3Lz9+GozNPNcdV3KX0ewJK9Hi9G6YdruAdSRpT4Z0TR248J53O/Q2UfuuEgd0eT8Y8h9IP
+        RHF+z79vwNnkeHHx3vulpV8aBIFFMuQhpQv77Hb41DAvq31+/yXLEPIbZDZqvBhmT0IAAAAASUVORK5C
         YII=
 </value>
   </data>
@@ -230,6 +230,55 @@
         C7HMeYu50pCW0Xxis36aPfu8A70HV8KmBBc+41249S6E1kDRPXfL1S5kn8YU8w5jlaNco/FUpuvy4Mep
         q5sDgV2cMHSYEyZ+6MAkutrq05hiTOwv8uP0UdOj8/7P8630p/x57nD8F0th6buEVFJ1AAAAAElFTkSu
         QmCC
+</value>
+  </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>237, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAADgkAAAJNU0Z0AUkBTAIBAQIB
+        AAEgAQABIAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
+        AAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
+        AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
+        kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
+        MwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZAgABZgHMAgABZgH/AgAB
+        mQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFmAgABzAGZAgACzAIAAcwB
+        /wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEzAQABmQEAATMBAAHMAQAB
+        MwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFmAgABMwFmATMBAAEzAmYB
+        AAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFmAQABMwKZAQABMwGZAcwB
+        AAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEAATMBzAH/AQABMwH/ATMB
+        AAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFmAQABZgEAAWYBAAGZAQAB
+        ZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFmATMBzAEAAWYBMwH/AQAC
+        ZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFmAQABZgKZAQABZgGZAcwB
+        AAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEAAWYB/wIAAWYB/wEzAQAB
+        ZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZAQABmQEAAZkBAAHMAQAB
+        mQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEzAQABmQEzAWYBAAGZAWYB
+        mQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/AQABmQHMAgABmQHMATMB
+        AAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEAAZkBzAFmAQABmQH/AZkB
+        AAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHMAQABzAEAAZkBMwIAAcwC
+        MwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFmATMBAAGZAmYBAAHMAWYB
+        mQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZAQABzAGZAcwBAAHMAZkB
+        /wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/ATMBAAGZAf8BZgEAAcwB
+        /wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHMATMCAAH/AjMBAAH/ATMB
+        ZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJmAQAB/wFmAZkBAAH/AWYB
+        zAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHMAQAB/wGZAf8BAAH/AcwC
+        AAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEAAcwB/wFmAQAC/wGZAQAC
+        /wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEAASEBAAGlAQADXwEAA3cB
+        AAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7Af8BAAGkAqABAAOAAwAB
+        /wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA/8FAAH/AeoBDgIjASIBAAHwCAAB/wHqAQ4BKQEDASIB
+        AAHwJwABkgEjATIBUwN6AVMBKwEAAf8FAAGSASgBOwFdA+UBXQE3AQAB/yQAAW0BKwFNB1MBLAELAf8D
+        AAFtATYBWAZdAVgBNgEOAf8iAAHyASUELAIyBSwDAAHyAS8CVwJYAjsBNwJYAlckAAwsASYB8AIAA1cB
+        NgQ3AjYCVwFWAfAgAAH0ASUBJgosAiYBAAH0AVABVgRXAzYDVwJWIQAB9wMmCCwDJgELAfcDVghXA1YB
+        IiAAAW0EJgcsAyYBAQFtBVYFVwRWASggAAHsASYDRwdNAkcBJgEeAewBTw1WASIgAAHwASYCRwlNAUcB
+        JgEAAfABTwKXCVYBlwFVIgABHgFHC00BJgHqAQABDQyXAU8B6iEAARQBJgrjARcBHgH/AQABFAFPBJcC
+        eAWXAQ0B/yIAAQsBRwkWASABkgQAAXEJmAFOAZIjAAH/AQsBJgaUAeMBIAFtBAAB/wEAAU8GCAGdAUgB
+        bSYAARQBHgH5AkcBJgEgAQAB8gcAARQBDQFOA3EBSAEAAfIpAAHwAewBbQH3AfQLAAHwAewBbQH3AfQl
+        AAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB8AEPAfABDwQAAeABAwHgAQME
+        AAHAAQEBwAEBBAABgAEBAYABAQQAAYABAAGALQABgAEAAYAFAAGAAQABgAUAAcABAQHAAQEEAAHAAQMB
+        wAEDBAAB8AEHAfABBwQAAfwBHwH8AR8EAAs=
 </value>
   </data>
 </root>
