network scan working but still need refresh time and less

--- a/MIMIRSOFT/MIMIRSOFT/Form1.resx
+++ b/MIMIRSOFT/MIMIRSOFT/Form1.resx
@@ -67,38 +67,38 @@
   <data name="startBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZdNSNtgGMc7xg4eBrLDDqPgYQylOK1amzT9
-        SBOTNP2y9aN69rKTl+Hd4W0yRHbo2BBkMNzQUw9jc4Mhc7bdFMu2fmvTefPiwYMHEemz97XvGE5dNU36
-        hx+U5Hme/x+SvH1fwx/Ri3TTqBKYHfoVLEYUf2pECU5Jy/Qtclt/Rcq++ZFyAE6hePeGFf94ZClynZTp
-        o87ZzuZAOXAUQabnMVwOpAezHoGUay/H824qUvYjs/+w7K+gRxOT17i7pE070VELO6z44JIcDim+aSbG
-        3CTt9YuOmlk0FK5CqCjuDpS8YwYwXCNj1AsHGFS8oIaw4tkIpSWGjFKnkwAlGVTzTq6Et+UFeYU1kpFX
-        Ew4wUPKABhyES9IkXlPI6MsJBwijAVrRXxR3QgVplIyvLQsOsC2B9gir8rqri9hcLBwgtC2CHpgypuPg
-        ljgnfrDdJnZnhQP0o2I9CWTE/WBRmOh50XOD2P6VJdrOBrcEaAT+vJASPjJ3iHVV1QB9qKAx+At8klhX
-        hQMEtnhoJNTLrg5iXw3gL/LQMPIcUHNnAnDopv74ChxIm+7Tj8CMAviKbtAbb9YN0gabYl53nX4JcQBv
-        ARXoRY4Fz6Z9X4q7JnoenPMZ4gBygQXNybNg+m46FpP2OduzjosXInO0DQVwoSbt8KRdICQcq66YpfZS
-        bH7axnryqEkDpIwTxG+OHe4TPULG1xYOIOWdUBc5J9jitgM+wUzSM8ar/R3jAGLOAWoRluwVPsksWF/d
-        V7chURtA+GkHPkFvON9a6tuStaMAQs4OlybDAL9u22VXqDHUXv+mFAfoyzFQkywD1q/WQ26Nftw63ard
-        trzjyT2qL2tDBufDYxZtFS5Ox5g33dofTFoetTRzP+ijE6N/QNfBnaTSjvcW/Y5mWM5E7zyXpoHLEtBv
-        xzq15/xsHTdEDPoeTrGMD41NrtXeWTZOFdmENcV+6Z0yzZh0Pp4bDL8BESV5YPVFvwkAAAAASUVORK5C
-        YII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALeSURBVFhHvZdLSBtRFIZTShcuCtJFFyXgohQlWI0aM488
+        JjPOTN4mPqJrN125Ke4t7ipFpIuUFkEsxZYWSrMo9AFFak3SKoa2eWsmdefGhQsXIpLTe80txaqNTmby
+        wwdh5pzz/zAzN/ca/oh+STeNKoHZoV/BYkTxp0aU4JT8nr5GbuuvSNk3P1IOwDEU786w4h+PvIpcJmX6
+        qHO2szlQDhxEkOlpDJcD6cGsWyTl2sv+uJuKlP3I7D+88VfQo4l5VvibpE070VELN6z44JzsDym+aTbG
+        XiXt9YuOmjk0FC5CqChtD5S8YwYwXCJj1AsHGFS8oIaw4l4LpWWWjFKnowAlD6jmtacS3vQsepY4Ixl5
+        MeEAAyU3aMBeuCRP4jWFjD6fcIAwGqAV/UVpK1SQR8n42rLgAJsyaI+47Fl1dhGbs4UDhDYl0ANTxnQY
+        3JDmpA/MdWJ3UjhAPyrWk0BG2g0WxYmeJz1XiO1fWaLtXHBDhEbgz4sp8SN7g1hXVQ3Qhwoag78gJIl1
+        VThAYEOARkItdHUQ+2oAf1GAhpHngZo7EYBHN/XHV+BBXncdfwRmFMBXdIHeeLMukNe4FPu86/hLiAN4
+        C6hAL3IcuNdtu3LcOdFz55TPEAfwFDjQnDwHpu+mQylpm2MedZy9EJmjbSiAEzVphzvtBDFhX3bGLLWX
+        YvPDNs6dR00aIGccIH2zb/Gf6BEyvrZwADnvgLrIOYCJM3tCgp2kZ4wX+zvGAaScHdQiPrVVhCS7aH12
+        W92GRG0A8acNhAS95nhrqW9L1o4CiDkbnJsMC8Iqs80tUWOovf5NKQ7Ql2OhJlkWrF+t+/wKfb91ulW7
+        bXnHg1tUX5ZBBqcjYBaYCh+nY+yLbu0PJi33Wpr5H/TBkdE/oOvgSlJp+zuLfkczLEeid55P08BnCei3
+        fZXacXy2jhsiBn0Pp1jGu8Ym53LvLBenilzCmuK+9E6ZZkw6H88Nht/tlXk8ZL3EzAAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="stopBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZc9TBNhGMdfGXTRCRkq0nJtgfZ6713vo9dS
-        BxdjNME4mDg4kJiocdAo6OTiIgsumuhAjBG/h5KIWqRAEWlQKB8iBMqHfIgYYwyrXyi8PmcfBwyBUq/3
-        T37D3b33/P696yV3xIRsWgNzct1XdiAW5r92hYOsK6xnRGJXcKGqpFjCEdnnpuipfBLWF6dCATYf0jJm
-        AtbHdf3zOadTwFEbzz2JVnWU60vTMPB9FoxDiUS5/OmMw+HFkZmnQZZq6kP68kxQY3NBNWtScH4ipH+s
-        5naU4uh1k9eo+uu6of2MrrJ3JjACJTpV9cPpoiIXOlYPT8jmaECJ9ATT8lkTGdY11hEMzJ2y2znUrczu
-        goKtMV1pS8LC6YDCZnLAEBR5oaqzJ2w2O2rTqbDZtrfqWrIPFhjyXDIYgBK6NnWssHAn6glp07RUPxyc
-        0mRLGABXu6pOop6QOPzyt6psGZNQoh2cqIcrAJdlUvVbxgQQByfqjQIKm1DggEWMA4YT9YS0agrslCxj
-        DDCcqCekBTbGZDhgESnAcKKekJiq/NlpFaOA4UQ9Ic2wMeoXLcVwot4oILMRSbQUw4l6QpoUmQ1L1FKe
-        gRP1hERhY0ikltIEjyLqCXkq+9kbUbCUKDhRbxSQlvqowAYtoh8wnKgn5LLbfbSJ53/1woHXgi+nGPKr
-        fmm51uM5i/p0aktclVEokYRFAzmiH2iGJ+CKwF9C7crUuLkjtxyOn93GYp/5xODPd0301aFu9Vx0uQ4/
-        ttkWX/l41mciLZSyG5IYAUVe2rRGLnDcoUZR/PESTuzl/582uO/1khR3E7IFFevnvMt18BGU6IIBSd6b
-        NXG4nbcp7S3Lz9+GozNPNcdV3KX0ewJK9Hi9G6YdruAdSRpT4Z0TR248J53O/Q2UfuuEgd0eT8Y8h9IP
-        RHF+z79vwNnkeHHx3vulpV8aBIFFMuQhpQv77Hb41DAvq31+/yXLEPIbZDZqvBhmT0IAAAAASUVORK5C
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALfSURBVFhHvZc9TBNhGMcfGXTRCRkq0nJtgfZ6713vo9dS
+        BxdjNME4mDg4kJiocdAo6OTiIonBxUFjiDF+69AmohYpUEQaFMqHCOFbPkSMMYbVLxRen7OvA4ZAqdf7
+        J7/h7t57fv/e9ZI7MCEbVsGcXPWV7YuH+a8d4SDtCOsZkdwRnK8qKZbYiOxzQ/RUPgnrC5OhAJ0LaRkz
+        jusTuv75jNMpsFHrzz2JVLWV64tTOPB9FoxhiWS5/OmUw+FlIzNPVJZqroX0pemgRmeDataM4PnJkP6x
+        mttWykavmbx61V/Xie2ndZW+M4EhLNGuqh9OFhW5mGPl8AAbYwEl0hVMy2dMZFDXaFswMHvCbueYbnl2
+        FhRsjutKSwoXTgUUOp0DBrDIC1WdOWaz2Zk2nQqbbWuzrqV6cIEhzyX9ASyha5NHCgu3Mz1Ai6aN9OLB
+        SU22hD50tarqBNMDJPCXv1Vly5jAEq3oZHq8AnhZJlS/ZYwjCXQyvVFAoeMKHrCIMcRwMj1As6bgTsky
+        RhHDyfQATbgxKuMBixhBDCfTA8RV5c9OqxhGDCfTAzTixrBftBTDyfRGAZkOSaKlGE6mB2hQZDooEUt5
+        hk6mB4jhxoBILKUBH0WmB3gq++kbUbCUGDqZ3iggLfYQgfZbRC9iOJke4JLbfbiB539144HXgi+nGPKL
+        fmmp1uM5zfTp1Ja4KmNYIoWL+nJEL9KIT8Blgb/AtMtT4+YO3XQ4fnYai33mE8c/3xXRV8d0K+e8y3Xw
+        sc228MrH0x4TaSKEXpfECCry0qZVco7jDtSL4o+XeGI3//+04H2/JUkJN8Amplg7Z12u/Y+wRAcOSPHe
+        rEng7bxNSHdZfv4WNjrzVHNcxV1CviexRJfXu25a8QrekaRRFd852cj157jTuTdKyLd2HNjp8WTMcyz9
+        QBTndv37BpxNjhYX775fWvolKgg0kiEPCZnfY7fjp4Z5Wenz+y9ZBuA3vPNqquK0BtIAAAAASUVORK5C
         YII=
 </value>
   </data>
@@ -240,7 +240,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAADgkAAAJNU0Z0AUkBTAIBAQIB
-        AAEgAQABIAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
+        AAFoAQABaAEAARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
         AAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
         AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
         kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
@@ -281,4 +281,7 @@
         wAEDBAAB8AEHAfABBwQAAfwBHwH8AR8EAAs=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>91</value>
+  </metadata>
 </root>
