--- a/MIMIRSOFT/MIMIRSOFT/Form1.resx
+++ b/MIMIRSOFT/MIMIRSOFT/Form1.resx
@@ -60,10 +60,27 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>345, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="saveElementsToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAAn1JREFUWEftl99rklEYx98/I+/WVXOxFYOKbhbZ2ChYBRJSY65YhLnIxfpBujZM
+        1MVMW6nv5KUMcTp1NopGREEXUREsWq3WaLGLqKA/oMt8Ot95DH+8ToujFfTA50LOc77fDyIHlP6a0Wg3
+        Nzfquvza9v3xWtKo2+vXNLU289rsrNNuamkz9H4LBZyUjlyuKehAl2Zjawuvl6QNO7tkRXbR4qNwXUAX
+        +zZkXi9J7ENqJur7ufDq4XV6endCKMjM5aOrqUOf4vWFAs9mQ9RpPEYGi1UoyER2RYGpsIds3iCJHmQi
+        uwqBMdp+4Ai195qFgkxkVxSIs6VB9xXKZDJCQSayKwvcGKPdfSfJ4vAIBZnILiuQuOmh+6lr5PPZqe+8
+        gxbefxAKMpGNDnSVCDhcQ6QE3TRkt9LBARuFpm4JBZnIVmQ3oatE4KKTCbBDLOlPnKXE7AOhIDMngK5i
+        gel8gePDo/R4bp7xUhDzq5kFAp36aV5fKrDLaKbh8RCNCAJZyKxa4IJP5s+HuEHmvyMw4PTSysfPQkHm
+        mgKHzP1kOn2KDCYz7TMNknsiXMLknXv0dnllTbCjdheZyEYHuooF0pfGrRSddJTFG7CR8cyIamk+2MGu
+        WkYOdDGBNK/PCrx4cpW+f42W5cs7ZfU5fb20rFoMcIYd7Kpl5EDXLwsAr99Ge45a6PA5uyo4w47a3Xx+
+        WwB8WlTozfOAKjhTu1OMmkCqWgERcIGCpzhZd4EOfZLX/xfICtyeGaWluWBdQFexQCyRcNIC+yXXA3Qx
+        gRivl6SGLW09hn4TxeNOSiZdNQUd6Fq/TdfD67PDJLrZn9MII1ZjIg1bd3Tz2j89kvQDQicthpCfe4UA
+        AAAASUVORK5CYII=
+</value>
+  </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>460, 17</value>
   </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="startBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -199,7 +216,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAADgkAAAJNU0Z0AUkBTAIBAQIB
-        AAH4AQEB+AEBARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
+        AAFoAQIBaAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
         AAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
         AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
         kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
