add delete element button and feature

--- a/MIMIRSOFT/MIMIRSOFT/Form1.resx
+++ b/MIMIRSOFT/MIMIRSOFT/Form1.resx
@@ -172,6 +172,18 @@
         rkJggg==
 </value>
   </data>
+  <data name="deleteBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFJSURBVFhH7ZYxSgNRFEXHIgRxASkNBGy1SmORJdgJscoO
+        0lkIYm3lNlxCIISsIL2dhWlDBLETzD0wF+Tnj3GSHwjyLxwY7nvvvlfMwBQ1dSHG4kt8B+BRo2cv6opP
+        ES4OoYfe5JoJLxmJpwA81+lNqrZw+DNGhai5j5mtdCJOA66Fg29LLwY19zET1sn+VWfiQzgkNWSzo1JX
+        IjaYEnZE1RcTERtKCTvYtSbe5NjAPmDXmu7Fq3gTblyUXshcLAPwYr1kOI9sPHZVirfVA0OMHUWG88je
+        qIM8oCOmJZcY0rmwxzOiZo8ZlOQAFtjzZ9QT9nhGPz9jH5UPyAfkA/IB+YB8wP84oCHw4RhDagp7PCNq
+        9phBtQ9oCQ/cYewoMpxH9kYdCf7vGHgXj+JhS5glgywyyf6TBsJXp4LMWroRLyIWVgcyyIqoKFbcRark
+        s1yydQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="searchBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
@@ -257,7 +269,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
         SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAADgkAAAJNU0Z0AUkBTAIBAQIB
-        AAG4AQIBuAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
+        AAHQAQIB0AECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMAAUADAAEQAwABAQEAAQgG
         AAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEAAfABygGmAQABMwUAATMB
         AAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEAAYABfAH/AQACUAH/AQAB
         kwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFmAwABmQMAAcwCAAEzAwAC
